examples/type_errors/missing_data_field.roto
filter foo {
	define {
		rx msg: BmpMessage;
	}

	term bar {
		match msg with {
			InitiationMessage -> true, // should error here
		} 
	}
}
